# codexaudio

./: .gitignore  Dockerfile  README.md  README2.md  Transcribe.py  live_transcribe.py  predownload_models.py  prompt.txt  pyproject.toml  record.py  server.py  summarize.py
live_transcribe_testing/: dual_live_transcribe.py  live_transcribe_2.py  live_transcribe_3.py
recordings/: .transcribe_stats.json  George H. W. Bush EvalutionInterview_transcript.json
utils/: list_devices.py
